# Crowdmind-backend

./: .dockerignore  .gitignore  DATABASE.md  Dockerfile  docker-compose.yml  main.py  nginx.conf  requirements.txt  test_main.py
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  dependencies.py  errors.py  logging.py
backend/app/domain/entities/: agent.py  agent_model.py  dataset.py  device.py  experiment.py  experiment_agent.py  experiment_metrics.py  model.py  reaction.py  response.py  survey.py  survey_aggregate.py  survey_question.py  survey_question_response.py  user.py
backend/app/domain/enums/: common.py
backend/app/infrastructure/cache/: redis_client.py
backend/app/infrastructure/db/: supabase_client.py
backend/app/infrastructure/llm/: groq_client.py  ollama_client.py
backend/app/infrastructure/storage/: storage_client.py  supabase_storage.py
backend/app/repositories/: agent_model_repo.py  agent_repo.py  dataset_repo.py  device_repo.py  experiment_agent_repo.py  experiment_metrics_repo.py  experiment_repo.py  model_repo.py  reaction_repo.py  response_repo.py  survey_aggregate_repo.py  survey_question_repo.py  survey_question_response_repo.py  survey_repo.py  user_repo.py
backend/app/services/: agent_service.py  dataset_service.py  experiment_service.py  model_service.py  reaction_service.py  realtime_service.py  survey_service.py
backend/app/tests/: conftest.py  test_datasets.py  test_health.py  test_models.py  test_surveys.py
(+18 files in other folders)
